scrollbars no longer show on windows unless necessary

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -91,6 +91,10 @@ button.exit-button {
   z-index: 999; // doesn't matter does it?
 }
 
+.scroll-content {
+  overflow-y: auto !important;
+}
+
 @font-face {
   font-family: 'ChessAlpha';
   src: url('chessalpha.eot');
